Added metrics and update endpoints
