# api/customers.go
@@ -2,12 +2,18 @@ package api
 
 import (
 	"context"
-	"net/http"
-	"strconv"
 
 	"dev.azure.com/jjoogam/Ecommerce-core/api/middleware"
+	"dev.azure.com/jjoogam/Ecommerce-core/internal/metrics"
 	"dev.azure.com/jjoogam/Ecommerce-core/internal/repository"
+
+	"encoding/json"
+	"fmt"
+	"io/ioutil"
+	"net/http"
+
 	"dev.azure.com/jjoogam/Ecommerce-core/model"
+	"emperror.dev/errors"
 
 	"github.com/jackc/pgx/v4"
 	"github.com/labstack/echo/v4"
@@ -21,8 +27,9 @@ type (
 
 	CustomerQueryRepository interface {
 		GetCustomers(ctx context.Context) ([]model.Customer, error)
-		FindCustomer(ctx context.Context, customerNumber int) (*model.Customer, error)
-		DeleteCustomer(ctx context.Context, customerNumber int) error
+		FindCustomer(ctx context.Context, email string) (*model.Customer, error)
+		DeleteCustomer(ctx context.Context, email string) error
+		UpdateCustomer(ctx context.Context, customer model.Customer) error
 	}
 
 	CustomerQueryRepositoryFactory func(pgx.Tx) CustomerQueryRepository
@@ -46,9 +53,10 @@ func (a *CustomerController) WithQueryRepository(f CustomerQueryRepositoryFactor
 
 func (a *CustomerController) RegisterRoutes(e *echo.Echo) {
 	customerGroup := e.Group("/customers", middleware.Transaction(a.txProvider))
-	customerGroup.GET("/get_customers", a.Getcustomers)
-	customerGroup.GET("/get_customer", a.findCustomer)
-	customerGroup.DELETE("/delete_customer", a.deleteCustomer)
+	customerGroup.GET("/customers", a.Getcustomers)
+	customerGroup.GET("/get", a.findCustomer)
+	customerGroup.DELETE("/delete", a.deleteCustomer)
+	customerGroup.PATCH("/update", a.UpdateCustomer)
 
 }
 
@@ -56,7 +64,7 @@ func (a *CustomerController) RegisterRoutes(e *echo.Echo) {
 // @Description Gets all customers
 // @Tags Customer
 // @Produce json
-// @Router /customers/get_customers [get]
+// @Router /customers/customers [get]
 // @Success 200 {object} model.Customer
 // @Failure 400 {object} model.ErrValidation
 func (a *CustomerController) Getcustomers(c echo.Context) error {
@@ -80,12 +88,12 @@ func (a *CustomerController) Getcustomers(c echo.Context) error {
 // @Description Fetch a single customer
 // @Tags Customer
 // @Produce json
-// @Router /customers/get_customer [get]
-// @Param customer_number query int true "customer_number mandatory"
+// @Router /customers/get [get]
+// @Param email query string true "email mandatory"
 // @Success 200 {object} model.Customer
 // @Failure 400 {object} model.ErrValidation
 func (a *CustomerController) findCustomer(c echo.Context) error {
-	cuid, err := a.decodeCustomer(c)
+	email, err := a.decodeCustomer(c)
 	if err != nil {
 		return err
 	}
@@ -95,7 +103,7 @@ func (a *CustomerController) findCustomer(c echo.Context) error {
 	}
 	r := a.queryRepositoryFactory(db)
 	ctx := c.Request().Context()
-	customer, err := r.FindCustomer(ctx, *cuid)
+	customer, err := r.FindCustomer(ctx, email)
 	if err != nil {
 		return err
 	}
@@ -108,12 +116,12 @@ func (a *CustomerController) findCustomer(c echo.Context) error {
 // @Description Deletes a single customer
 // @Tags Customer
 // @Produce json
-// @Router /customers/delete_customer [delete]
-// @Param customer_number query int true "customer_number mandatory"
+// @Router /customers/delete [delete]
+// @Param email query string true "email mandatory"
 // @Success 200 {object} model.Customer
 // @Failure 400 {object} model.ErrValidation
 func (a *CustomerController) deleteCustomer(c echo.Context) error {
-	cuid, err := a.decodeCustomer(c)
+	email, err := a.decodeCustomer(c)
 	if err != nil {
 		return err
 	}
@@ -123,32 +131,65 @@ func (a *CustomerController) deleteCustomer(c echo.Context) error {
 	}
 	r := a.queryRepositoryFactory(db)
 	ctx := c.Request().Context()
-	customer, err := r.FindCustomer(ctx, *cuid)
+	_, err = r.FindCustomer(ctx, email)
 	if err != nil {
 		return err
 	}
-	err = r.DeleteCustomer(ctx, *cuid)
+	err = r.DeleteCustomer(ctx, email)
 	if err != nil {
 		return err
 	}
 
 	return c.JSON(http.StatusOK, model.CustomerResponse{
-		Customer: *customer,
-		Status:   "Deleted",
+		Status: "Deleted",
 	})
 
 }
 
-func (h *CustomerController) decodeCustomer(c echo.Context) (*int, error) {
-	customerNumber := c.QueryParam("customer_number")
+func (h *CustomerController) decodeCustomer(c echo.Context) (string, error) {
+	customerNumber := c.QueryParam("email")
 	if customerNumber == "" && len(customerNumber) == 0 {
-		return nil, model.ErrValidation{InvalidParams: []model.InvalidParam{{Name: "customer_number", Reason: "Missing key customer_number ."}}}
+		return "", model.ErrValidation{InvalidParams: []model.InvalidParam{{Name: "customer_number", Reason: "Missing key customer_number ."}}}
 	}
 
-	cuId, err := strconv.Atoi(customerNumber)
+	return customerNumber, nil
+}
+
+// @Summary Updates a  customer
+// @Description updates a single customer
+// @Tags Customer
+// @Produce json
+// @Router /customers/update [patch]
+// @Param customer body model.Customer true "customer_number"
+// @Success 200 {object} model.Customer
+// @Failure 400 {object} model.ErrValidation
+func (a *CustomerController) UpdateCustomer(c echo.Context) error {
+	ctx := context.Background()
+	db, err := middleware.FromTransactionContext(c)
 	if err != nil {
-		return nil, model.ErrValidation{InvalidParams: []model.InvalidParam{{Name: "customer_number", Reason: "Incorrect customer_number"}}}
+		metrics.DBErrorInc()
+		return errors.Wrap(err, "unable to resolve transaction")
+	}
+	r := a.queryRepositoryFactory(db)
+	requestbody, err := ioutil.ReadAll(c.Request().Body)
+
+	var request model.Customer
+	err = json.Unmarshal(requestbody, &request)
+	if err != nil {
+		return err
+	}
+	if err != nil {
+
+		return errors.Wrap(err, "error getting customer information from the request")
 	}
 
-	return &cuId, nil
+	if request.Email == "" {
+		return model.ErrValidation{InvalidParams: []model.InvalidParam{{Name: "email", Reason: "email is a mandatory attribute and cannot be 0"}}}
+	}
+	err = r.UpdateCustomer(ctx, request)
+	if err != nil {
+		return fmt.Errorf("Error in the request", err.Error())
+	}
+	return c.String(http.StatusOK, "Customer updated successfully")
+
 }
